Added initdb.js and mongodockerfile alogn with changes in docker compose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,10 +24,12 @@ services:
       
   mongodb:
     container_name: mongodb
-    image: mongo
+    image: mongo-seed
     networks:
-      - nodeapp-network
+    - nodeapp-network
+
 
 networks:
   nodeapp-network:
     driver: bridge
+
